--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/graygreen"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/graygreen">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/circularlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#91646464"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/circularlayout"
-        android:visibility="gone"
-        >
+        app:layout_constraintTop_toTopOf="parent">
+
         <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
             android:id="@+id/circularFillableLoaders"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:src="@drawable/progressimg"
             app:cfl_border="true"
             app:cfl_border_width="2dp"
             app:cfl_progress="70"
-            android:src="@drawable/progressimg"
             app:cfl_wave_amplitude="0.06"
-            app:layout_constraintTop_toTopOf="parent"
+            app:cfl_wave_color="#809584"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:cfl_wave_color="#809584" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/topscreen_pickmusic"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/topscreen_pickmusic"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/menu_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="0.9">
 
 
@@ -49,26 +49,26 @@
             android:id="@+id/blob"
             android:layout_width="300dp"
             android:layout_height="300dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             custom:avColor="#2D593C"
             custom:avDensity="0.5"
             custom:avSpeed="medium"
             custom:avType="fill"
-            custom:layout_constraintTop_toBottomOf="@+id/picktop"
             custom:layout_constraintBottom_toTopOf="@+id/seek_layout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            custom:layout_constraintTop_toBottomOf="@+id/picktop" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/picktop"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/picktop"
-            app:layout_constraintTop_toTopOf="parent"
+            android:paddingVertical="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.01"
-            android:paddingLeft="20dp"
-            android:paddingVertical="20dp"
-            android:paddingRight="20dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="0.01">
 
             <ToggleButton
                 android:id="@+id/heartbtn"
@@ -76,50 +76,49 @@
                 android:layout_height="35dp"
                 android:background="@drawable/my_heart_btn"
                 android:checked="false"
-                app:layout_constraintHorizontal_weight="0.1"
                 android:text=""
                 android:textOff=""
                 android:textOn=""
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_weight="0.1"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/pick_songname"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/pick_songname"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_weight="0.8"
+                android:layout_marginStart="20dp"
                 android:text="pick_songname"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textStyle="bold"
                 android:textSize="25sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_weight="0.8"
                 app:layout_constraintLeft_toRightOf="@+id/heartbtn"
                 app:layout_constraintRight_toLeftOf="@+id/optionmenu"
-                android:layout_marginStart="20dp"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/optionmenu"
-                app:layout_constraintLeft_toRightOf="@+id/pick_songname"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_weight="0.15"
                 android:src="@drawable/optionmenu"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintHorizontal_weight="0.15"
+                app:layout_constraintLeft_toRightOf="@+id/pick_songname"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/iconlayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/iconlayout"
-            app:layout_constraintTop_toBottomOf="@+id/picktop"
             app:layout_constraintBottom_toTopOf="@+id/seek_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/picktop"
             app:layout_constraintVertical_weight="0.2">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -130,138 +129,136 @@
                 app:civ_border_color="#000000"
                 app:civ_border_overlay="true"
                 app:civ_border_width="0dp"
-                custom:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                custom:layout_constraintRight_toRightOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
             android:id="@+id/seek_layout"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/iconlayout"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             app:layout_constraintBottom_toTopOf="@+id/ingmusic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.03"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp">
+            app:layout_constraintTop_toBottomOf="@+id/iconlayout"
+            app:layout_constraintVertical_weight="0.03">
 
 
             <SeekBar
                 android:id="@+id/seek_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/stopbtn"
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:theme="@style/SeekBarColor"
-                android:backgroundTint="@color/white"/>
+                android:layout_toEndOf="@id/stopbtn"
+                android:backgroundTint="@color/white"
+                android:theme="@style/SeekBarColor" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
         <LinearLayout
+            android:id="@+id/ingmusic"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/ingmusic"
-            app:layout_constraintTop_toBottomOf="@+id/seek_layout"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.05"
-            android:layout_marginBottom="20dp"
-            android:layout_marginHorizontal="20dp"
-            android:gravity="center"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/seek_layout"
+            app:layout_constraintVertical_weight="0.05">
 
             <ImageView
                 android:id="@+id/playbtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/testbtn"/>
+                android:src="@drawable/testbtn" />
 
 
             <ImageView
-                android:layout_marginStart="30dp"
                 android:id="@+id/stopbtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/newstopbtn"/>
+                android:layout_marginStart="30dp"
+                android:src="@drawable/newstopbtn" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detail_info_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/detail_info_layout"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="#91646464"
+        android:paddingBottom="10dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/menu_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingBottom="10dp"
-        app:layout_constraintVertical_weight="0.9"
-        android:background="#91646464"
-        android:visibility="gone">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="0.9">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/gray_screen"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/gray_screen"
-            app:layout_constraintTop_toTopOf="parent"
+            android:paddingBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/detail_cardview"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:paddingBottom="10dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/detail_cardview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:cardCornerRadius="15dp"
             android:visibility="gone"
-            android:id="@+id/detail_cardview"
-            >
+            app:cardCornerRadius="15dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
             <FrameLayout
+                android:id="@+id/detail_info_frame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/detail_info_frame">
-            </FrameLayout>
+                android:layout_height="wrap_content"></FrameLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <!--메뉴바-->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menu_bar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/menu_bar"
-        android:background="@color/graygreen"
         android:layout_alignParentBottom="true"
-        app:layout_constraintTop_toBottomOf="@+id/topscreen_pickmusic"
+        android:background="@color/graygreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.1"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/topscreen_pickmusic"
+        app:layout_constraintVertical_weight="0.1">
 
 
         <ImageButton
             android:id="@+id/homeBtn"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
+            android:layout_marginBottom="10dp"
             android:adjustViewBounds="true"
             android:backgroundTint="@color/graygreen"
             android:contentDescription="홈"
-            android:layout_marginBottom="10dp"
             android:scaleType="fitCenter"
+            android:src="@drawable/home_new"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/myInfobtn"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/home_new" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/myInfobtn"
@@ -338,8 +335,7 @@
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/homeBtn"
-            app:layout_constraintRight_toRightOf="@+id/homeBtn"
-            />
+            app:layout_constraintRight_toRightOf="@+id/homeBtn" />
 
         <TextView
             android:id="@+id/myinfoword"
@@ -348,12 +344,11 @@
             android:layout_marginBottom="7dp"
             android:gravity="center"
             android:text="좋아요"
-            android:textSize="13sp"
             android:textColor="#8C000000"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/myInfobtn"
-            app:layout_constraintRight_toRightOf="@+id/myInfobtn"
-            />
+            app:layout_constraintRight_toRightOf="@+id/myInfobtn" />
 
         <TextView
             android:id="@+id/addword"
@@ -362,36 +357,37 @@
             android:layout_marginBottom="7dp"
             android:gravity="center"
             android:text="추가하기"
-            android:textSize="13sp"
             android:textColor="#8C000000"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/addbtn"
-            app:layout_constraintRight_toRightOf="@+id/addbtn"
-            />
+            app:layout_constraintRight_toRightOf="@+id/addbtn" />
+
         <TextView
             android:id="@+id/libraryword"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginBottom="7dp"
-            android:text="라이브러리"
-            android:textSize="13sp"
             android:gravity="center"
+            android:text="라이브러리"
             android:textColor="#8C000000"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/librarybtn"
-            app:layout_constraintRight_toRightOf="@+id/librarybtn"/>
+            app:layout_constraintRight_toRightOf="@+id/librarybtn" />
+
         <TextView
             android:id="@+id/setword"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="20dp"
             android:layout_marginBottom="7dp"
+            android:gravity="center"
             android:text="설정"
-            android:textSize="13sp"
             android:textColor="#8C000000"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/setbtn"
-            app:layout_constraintRight_toRightOf="@+id/setbtn"/>
+            app:layout_constraintRight_toRightOf="@+id/setbtn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
