--- a/app/src/main/res/layout/add_caption.xml
+++ b/app/src/main/res/layout/add_caption.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/graygreen"
+    android:id="@+id/captionid"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
