--- a/app/src/main/res/layout/show_music_info.xml
+++ b/app/src/main/res/layout/show_music_info.xml
@@ -83,7 +83,15 @@
             android:textStyle="bold"
             android:id="@+id/artisttxt"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/artistbtn"/>
+            app:layout_constraintLeft_toRightOf="@+id/artistbtn"
+
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:layout_marginTop="20dp"
@@ -146,7 +154,7 @@
             android:singleLine="true"
             android:scrollHorizontally="true"
             app:layout_constraintTop_toBottomOf="@+id/writertxt"
-            app:layout_constraintLeft_toLeftOf="@+id/writertxt"/>
+            app:layout_constraintLeft_toLeftOf="@+id/writertxt" />
 
         <TextView
             android:layout_marginTop="20dp"
