--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -153,7 +153,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="좋아요 표시한 음악이 없습니다."
+                    android:text="내가 만든 음악이 없습니다."
                     android:textSize="20sp"/>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
